Fix cart compile issues

--- a/RSP/Views/Cart/CardItemsList.cshtml
+++ b/RSP/Views/Cart/CardItemsList.cshtml
@@ -1,4 +1,4 @@
-﻿@model RSP.Dtos.CardItemDto
+﻿@model RSP.Dtos.CartItemDto
 <h1>Card Items details page.</h1>
 <div class="container">
     <div class="row">
