--- a/RSP/Views/Shared/_Layout.cshtml
+++ b/RSP/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Item" asp-action="ItemList">Items</a></li>
+                    <li><a asp-area="" asp-controller="Cart" asp-action="getCartList">Cart</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
