--- a/RSP/Views/Cart/CartItemList.cshtml
+++ b/RSP/Views/Cart/CartItemList.cshtml
@@ -1,4 +1,5 @@
-﻿<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+﻿
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <h2>Cart item list page</h2>
 <div class="container">
     <table id="cart" class="table table-hover table-condensed">
@@ -32,7 +33,7 @@
                 <td data-th="Subtotal" class="text-center">@(item.Item.Price * @item.Number)</td>
                 <td class="actions" data-th="">
                     <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
-                    <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+                    <a href="@Url.Action("Delete", "Cart", new { id = @item.Id })" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></a>
                 </td>
             </tr>
         }
@@ -42,7 +43,7 @@
             <td class="text-center"><strong>Total 1.99</strong></td>
         </tr>
         <tr>
-            <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+            <td><a href="@Url.Action("ItemList", "Item")" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
             <td colspan="2" class="hidden-xs"></td>
             <td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
             <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
