--- a/RSP/Views/Cart/CartItemList.cshtml
+++ b/RSP/Views/Cart/CartItemList.cshtml
@@ -21,7 +21,7 @@
                         <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/>
                         </div>
                         <div class="col-sm-10">
-                            <h4 class="nomargin">@item.Item.Name</h4>
+                            <a href="@Url.Action("ItemDetails", "Item", new { id = @item.Item.Id })"><h4 class="nomargin">@item.Item.Name</h4></a>
                             <p>@item.Item.Description.</p>
                         </div>
                     </div>
@@ -40,12 +40,12 @@
         </tbody>
         <tfoot>
         <tr class="visible-xs">
-            <td class="text-center"><strong>Total 1.99</strong></td>
+            <td class="text-center"><strong>Total @ViewData["Subtotal"]</strong></td>
         </tr>
         <tr>
             <td><a href="@Url.Action("ItemList", "Item")" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
             <td colspan="2" class="hidden-xs"></td>
-            <td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
+            <td class="hidden-xs text-center"><strong>Total $@ViewData["Subtotal"]</strong></td>
             <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
         </tr>
         </tfoot>
