--- a/RSP/Views/Cart/CartItemList.cshtml
+++ b/RSP/Views/Cart/CartItemList.cshtml
@@ -27,12 +27,9 @@
                     </div>
                 </td>
                 <td data-th="Price">@item.Item.Price</td>
-                <td data-th="Quantity">
-                    <input type="number" class="form-control text-center" value="@item.Number">
-                </td>
+                <td data-th="Quantity" class="text-center">@item.Number</td>
                 <td data-th="Subtotal" class="text-center">@(item.Item.Price * @item.Number)</td>
                 <td class="actions" data-th="">
-                    <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
                     <a href="@Url.Action("Delete", "Cart", new { id = @item.Id })" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></a>
                 </td>
             </tr>
